--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,4 +1,5 @@
-<%= form_for @person do |f| %>
-  <%= f.text_field :name %> <br /><br />
- <%= f.submit %>
-<% end %>
+Create A New Person And Save Their Address:
+
+<%= render "form" %>
+
+
