--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,4 +1,25 @@
 <%= form_for @person do |f| %>
+  <%== f.label :name %>
   <%= f.text_field :name %> <br /><br />
+  <%= f.fields_for :addresses do |address| %>
+  
+    <%= address.label :street_address_1 %>
+    <%= address.text_field :street_address_1 %>
+
+    <%= address.label :street_address_2 %>
+    <%= address.text_field :street_address_2 %>
+
+    <%= address.label :city %>
+    <%= address.text_field :city %>
+
+    <%= addr.label :state %>
+    <%= address.text_field :state %>
+
+    <%= addr.label :zip_code %>
+    <%= address.text_field :zip_code %>
+
+    <%= addr.label :address_type %>
+    <%= address.text_field :address_type %>
+  <% end %>
  <%= f.submit %>
 <% end %>
