--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,4 +1,15 @@
 <%= form_for @person do |f| %>
-  <%= f.text_field :name %> <br /><br />
- <%= f.submit %>
+
+  <%= f.text_field :name %>
+  <%= f.fields_for :addresses do |addr| %>
+    <%= addr.text_field :street_address_1  %>
+    <%= addr.text_field :street_address_2  %>
+    <%= addr.text_field :city  %>
+    <%= addr.text_field :state  %>
+    <%= addr.text_field :zipcode  %>
+    <%= addr.text_field :address_type %>
+  <% end %>
+  
+  <%= f.submit %>
+
 <% end %>
