--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,4 +1,26 @@
 <%= form_for @person do |f| %>
-  <%= f.text_field :name %> <br /><br />
- <%= f.submit %>
+<%= f.label :name %>
+<%= f.text_field :name %> <br /><br />
+
+<%= f.fields_for :addresses do |address| %>
+  <%= address.label :street_address_1 %>
+  <%= address.text_field :street_address_1 %><br>
+
+  <%= address.label :street_address_2 %>
+  <%= address.text_field :street_address_2 %><br>
+
+  <%= address.label :city %>
+  <%= address.text_field :city %><br>
+
+  <%= address.label :state %>
+  <%= address.text_field :state %><br>
+
+  <%= address.label :zipcode %>
+  <%= address.text_field :zipcode %><br>
+
+  <%= address.label :address_type %>
+  <%= address.text_field :address_type %><br>
+<% end %>
+
+<%= f.submit %>
 <% end %>
