--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -2,24 +2,24 @@
   <%= f.label :name %>
   <%= f.text_field :name %><br>
  
-  <%= f.fields_for :addresses do |addr| %>
-    <%= addr.label :street_address_1 %>
-    <%= addr.text_field :street_address_1 %><br>
+  <%= f.fields_for :addresses do |address| %>
+    <%= address.label :street_address_1 %>
+    <%= address.text_field :street_address_1 %><br>
  
-    <%= addr.label :street_address_2 %>
-    <%= addr.text_field :street_address_2 %><br>
+    <%= address.label :street_address_2 %>
+    <%= address.text_field :street_address_2 %><br>
  
-    <%= addr.label :city %>
-    <%= addr.text_field :city %><br>
+    <%= address.label :city %>
+    <%= address.text_field :city %><br>
  
-    <%= addr.label :state %>
-    <%= addr.text_field :state %><br>
+    <%= address.label :state %>
+    <%= address.text_field :state %><br>
  
-    <%= addr.label :zipcode %>
-    <%= addr.text_field :zipcode %><br>
+    <%= address.label :zipcode %>
+    <%= address.text_field :zipcode %><br>
  
-    <%= addr.label :address_type %>
-    <%= addr.text_field :address_type %><br>
+    <%= address.label :address_type %>
+    <%= address.text_field :address_type %><br>
   <% end %>
  
   <%= f.submit %>
