--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,4 +1,11 @@
 <%= form_for @person do |f| %>
   <%= f.text_field :name %> <br /><br />
+  <%= f.fields_for :addresses do |addr| %>
+    <%= addr.label :street_address_1 %>
+    <%= addr.text_field :street_address_1 %><br>
+
+    <%= addr.label :street_address_2 %>
+    <%= addr.text_field :street_address_2 %><br>
+  <% end %>
  <%= f.submit %>
 <% end %>
